--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,11 @@
 	path = vim/.vim/bundle/vim-surround
 	url = https://github.com/tpope/vim-surround.git
     ignore = dirty
+[submodule "vim/.vim/bundle/vim-commentary"]
+    path = vim/.vim/bundle/vim-commentary
+    url = https://github.com/tpope/vim-commentary.git
+    ignore = dirty
+[submodule "vim/.vim/bundle/vim-repeat"]
+    path = vim/.vim/bundle/vim-repeat
+    url = https://github.com/tpope/vim-repeat.git
+    ignore = dirty
