--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -238,10 +238,10 @@ exec --no-startup-id xfce4-panel --disable-wm-check
 bindsym $mod+p mode $power_mode
 set $power_mode "Suspend, Poweroff, Reboot, Logout"
 mode $power_mode {
-    bindsym s exec xfce4-session-logout --suspend; mode "default"
-    bindsym p exec xfce4-session-logout --halt; mode "default"
-    bindsym r exec xfce4-session-logout --reboot; mode "default"
-    bindsym l exec xfce4-session-logout --logout; mode "default"
+    bindsym s exec xfce4-session-logout --fast --suspend; mode "default"
+    bindsym p exec xfce4-session-logout --fast --halt; mode "default"
+    bindsym r exec xfce4-session-logout --fast --reboot; mode "default"
+    bindsym l exec xfce4-session-logout --fast --logout; mode "default"
     bindsym $mod+p mode "default"
     bindsym Escape mode "default"
     bindsym Return mode "default"
