--- a/i3/.i3/config
+++ b/i3/.i3/config
@@ -46,11 +46,13 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
+bindsym $win+d exec --no-startup-id "rofi -show-icons -modi run,drun -show run"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $win+d exec --no-startup-id i3-dmenu-desktop
-bindsym $win+d exec --no-startup-id "rofi -modi run,drun -show drun"
+bindsym $mod+Shift+d exec --no-startup-id i3-dmenu-desktop
+bindsym $win+Shift+d exec --no-startup-id "rofi -show-icons -modi run,drun -show drun"
+
 
 # change focus
 bindsym $mod+$left focus left
@@ -217,16 +219,12 @@ bindsym $win+Shift+Tab workspace prev
 ##############################
 # Autostart stuff
 ##############################
-
-# Always needed
 exec --no-startup-id compton -b
 exec_always --no-startup-id feh --bg-fill /home/bms/Pictures/wallpaper.png
 exec --no-startup-id xfce4-panel --disable-wm-check
-# exec --no-startup-id redshift-gtk -l 38.4:-85.4
-# exec --no-startup-id xfce4-terminal -T "popup-terminal"
-# for_window [class="(?i)xfce4-terminal" title="popup-terminal"] border pixel 5, move scratchpad
 
 # Only needed in bare i3 session
+# exec --no-startup-id redshift-gtk -l 38.4:-85.4
 # exec --no-startup-id nm-applet # NetworkManager
 # exec --no-startup-id xfce4-volumed # Volume control
 # exec --no-startup-id xfce4-power-manager
