--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
 set-option -g prefix C-a
-unbind-key C-b
 bind-key C-a send-prefix
-set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-set -g default-terminal "xterm-256color"
+
+# Start window numbering at 1
+set -g base-index 1
