Add key binding to check for available updates

--- a/compton/.compton.conf
+++ b/compton/.compton.conf
@@ -1,1 +1,6 @@
-opacity-rule = [ "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
+opacity-rule = [
+  "99:class_g = 'i3bar' && !_NET_WM_STATE@:32a",
+  "50:class_g = 'i3-frame' && !_NET_WM_STATE@:32a",
+  "80:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
+
