--- a/i3/.i3status.conf
+++ b/i3/.i3status.conf
@@ -15,7 +15,7 @@ general {
 order += "battery all"
 #order += "disk /"
 #order += "disk /home"
-order += "wireless _first_"
+#order += "wireless _first_"
 #order += "ethernet _first_"
 order += "load"
 order += "tztime local"
