--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,7 +15,7 @@
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:Hack 10
+font pango: Hack 10
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -91,6 +91,7 @@ bindsym $mod+f fullscreen toggle
 # bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
+bindsym $mod+x layout toggle tabbed splitv splith
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -173,14 +174,13 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bindsym $mod+b bar mode toggle
 bar {
-#    status_command i3status
+    status_command i3status
     position top
-    modifier $mod
+    modifier none
     mode hide
 }
 
 workspace_auto_back_and_forth yes
-# for_window [class="^.*"] border pixel 0
 default_border pixel 0
 default_floating_border pixel 3
 workspace_layout tabbed
@@ -278,7 +278,7 @@ mode $passthru {
 ###############################################################################
 gaps inner 15
 gaps outer 5
-#smart_gaps on
+smart_gaps on
 
 set $mode_gaps Gaps: (o) outer, (i) inner
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
